# picrs

./: Cargo.toml  LICENSE  README.md
src/: lib.rs  main.rs
src/constants/: mod.rs
src/engine/: mod.rs
src/field/: mod.rs  scalar.rs  vector.rs
src/geometry/: mod.rs
src/helpers/: coordinate_triplet.rs  mod.rs
src/model/: mod.rs
src/solver/: gauss_seidel_sor.rs  mod.rs
src/utils/: coordinate_triplet.rs  mod.rs
src/world/: mod.rs
