[package]
name = "picrs"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "driver"
path = "src/main.rs"

[lib]
name = "picrs"
path = "src/lib.rs"

[profile.release]
codegen-units = 1
lto = "fat"
panic = "abort"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = { version = "*" }
serde = { version = "*" }
serde_derive = { version = "*" }
anyhow = { version = "*" }
num = { version = "*" }